--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -1,58 +1,42 @@
-<div ng-controller="RecipesController" class="grid-100 row controls">
-  <div class="grid-30">
-    <!-- TODO Add directives to the select elememt in order to 
-      populate the list with the categories from the database.
-      You'll also need to add directives to handle when the user 
-      selects a new category so that you can refresh the recipes list. -->
-    <select categories-directive>
-      <option value="All">All Categories</option>
-    </select>
-  </div>
-  <div class="grid-70">
-    <div class="flush-right">
-      <!-- TODO Add a directive to this button in order to handle 
-        when the user clicks to add a new recipe. -->
-      <button>+ Add Recipe</button>
+<div ng-controller="RecipesController">
+    <div class="grid-100 row controls">
+        <div class="grid-30">
+            <select ng-model="selectedCategory" ng-change="getRecipes($scope.selectedCategory)">
+                <option value="">Please Select a Category</option>
+                <option ng-repeat="category in categories" value="{{category.name}}">{{category.name}}</option>
+            </select>
+        </div>
+        <div class="grid-70">
+            <div class="flush-right">
+                <button ng-click="addRecipe()">+ Add Recipe</button>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-<div class="clear"></div>
+    <div class="clear"></div>
 
-<!-- TODO Add a directive to this div element so that it only displays
-  when there are no recipes to display. -->
-<!--<div class="grid-100 row">-->
-  <!--<div class="grid-70">-->
-    <!--<p>No recipes found!</p>-->
-  <!--</div>-->
-<!--</div>-->
+    <div ng-if="recipes.length == 0" class="grid-100 row">
+        <div class="grid-70">
+            <p>No recipes found!</p>
+        </div>
+    </div>
 
-<!-- TODO Add a directive to this div element so that it repeats 
-  for each recipe to display. Also, add a directive to this div element 
-  so that it only displays when there are recipes to display. -->
-<div ng-repeat="recipe in recipes" class="grid-100 row addHover">
-  <!-- TODO Replace this anchor element's href attribute with a 
-    directive so that you can route the user to the Recipe Detail 
-    screen when they click on a row. -->
-  <a href="#">
-    <div class="grid-70">
-      <p>
-        {{recipe.name}}
-      </p>
+    <div  ng-repeat="recipe in recipes" class="grid-100 row addHover">
+        <a href="#">
+            <div class="grid-70">
+                <p>
+                    {{recipe.name}}
+                </p>
+            </div>
+        </a>
+        <div class="hoverBlock">
+            <div class="grid-30">
+                <div class="flush-right">
+                    <p>
+                        <a href="" ng-click="editRecipe(recipe)"> <img src="images/edit.svg" height="12px"> Edit </a>
+                        <a href="" ng-click="deleteRecipe(recipe)" class="no-action-link"> <img src="images/delete.svg" height="12px"> Delete </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-  </a>
-  <div class="hoverBlock">
-    <div class="grid-30">
-      <div class="flush-right">
-        <p>
-          <!-- TODO Replace this anchor element's href attribute with a 
-            directive so that you can route the user to the Recipe Detail 
-            screen when they click on the 'Edit' link. -->
-          <a href="#"> <img src="images/edit.svg" height="12px"> Edit </a>
-          <!-- TODO Add a directive to this anchor element so that you can 
-            delete the recipe when the user clicks on the 'Delete' link. -->
-          <a class="no-action-link"> <img src="images/delete.svg" height="12px"> Delete </a>
-        </p>
-      </div>
-    </div>
-  </div>
 </div>
