--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -1,4 +1,4 @@
-<div ng-controller="RecipeDetailController">
+<div ng-controller="RecipeDetailController" ng-init="errors = {}">
     <div class="grid-100 row controls">
         <div class="grid-50">
             <h2>{{recipe.name}}</h2>
@@ -11,16 +11,13 @@
         </div>
     </div>
     <div class="clear"></div>
-
-    <!-- TODO Add a directive to this div element so that it only displays when there are validation messages to display. -->
-    <div class="grid-100 row">
+    <!--TODO - ADD Overall Validation-->
+    <div ng-if="errors.length > 0" class="grid-100 row">
         <div class="grid-100">
             <p><i>The following errors were found:</i></p>
             <ul class="validation-errors">
-    <!--&lt;!&ndash; TODO Add a directive to this li element so that it repeats-->
-    <!--for each validation message that there is to display &ndash;&gt;-->
-                <li>
-    <!--&lt;!&ndash; TODO Add a binding expression to display the validation user message. &ndash;&gt;-->
+                <li ng-repeat="error in errors">
+                    {{error.details}}
                 </li>
             </ul>
         </div>
@@ -123,9 +120,9 @@
         <div ng-repeat="ingredient in recipe.ingredients" class="ingredient-row">
             <div class="prefix-20 grid-30">
                 <p>
-                    <!--FIXME - Model and repeat are not working together-->
-                    <select ng-model="foodItem">
-                        <option ng-repeat="food in foodItems" value="">{{food.name}}</option>
+
+                    <select ng-model="ingredient.foodItem">
+                        <option ng-repeat="food in foodItems" value="{{food.name}}">{{food.name}}</option>
                     </select>
                 </p>
             </div>
@@ -149,8 +146,7 @@
 
         <div class="prefix-20 grid-80 add-row">
             <p>
-                <!-- TODO Add a directive to this button in order to handle when the user clicks to add a new recipe ingredient. -->
-                <button>+ Add Another Ingredient</button>
+                <button ng-click="newIngredient()">+ Add Another Ingredient</button>
             </p>
         </div>
 
@@ -183,8 +179,7 @@
 
         <div class="prefix-20 grid-80 add-row">
             <p>
-                <!-- TODO Add a directive to this button in order to handle when the user clicks to add a new recipe step. -->
-                <button>+ Add Another Step</button>
+                <button ng-click="newStep()">+ Add Another Step</button>
             </p>
         </div>
 
